[package]
name = "cln-lsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"libs/lsp-primitives", 
	"libs/cln-lsps",
	"plugins/lsps-client",
	"plugins/lsps-server"
	]

[dependencies]
lsp-primitives = {path = "libs/lsp-primitives"}
cln-lsps = {path = "libs/cln-lsps" }
