[package]
name = "cln-lsps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cln-rpc = []
cln-grpc = []

[dependencies]
lsp-primitives = {path = "../lsp-primitives"}
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tonic = "0.10.2"
cln-rpc = {git = "https://github.com/ElementsProject/lightning", rev ="78deb485fbdf0255365bac56c5a9781a3324bd56"}
hex = "0.4.3"
tokio = { version = "1.34.0", features = ["time"] }
log = "0.4.20"


[dev-dependencies]
futures = "0.3.29"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "time"] }
