[package]
name = "lsp-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = "0.28.0"
serde = {version = "1.0.192", features=["derive"]}
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["macros", "parsing", "formatting"] }
uuid = { version = "1.5.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.108"

