[package]
name = "lsps-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-primitives = { path = "../../libs/lsp-primitives" }
cln-lsps = {path = "../../libs/cln-lsps" }
anyhow = "1.0"
cln-plugin = {git = "https://github.com/ElementsProject/lightning", rev ="78deb485fbdf0255365bac56c5a9781a3324bd56"}
cln-rpc = {git = "https://github.com/ElementsProject/lightning", rev ="78deb485fbdf0255365bac56c5a9781a3324bd56"}
log = "0.4"
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"

