[package]
name = "lsps0-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-primitives = { path = "../../libs/lsp-primitives" }
cln-lsps0 = {path = "../../libs/cln-lsps0" }
anyhow = "1.0"
cln-plugin = "0.1.6"
cln-rpc = "0.1.6"
log = "0.4"
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"

