[package]
name = "lsps0-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
cln-lsps0 = { version = "0.1.0", path = "../../libs/cln-lsps0" }
cln-plugin = "0.1.6"
cln-rpc = {git = "https://github.com/ErikDeSmedt/lightning", rev = "8eaaa8d88b9de6e5e788d93efe57c0ce695b0db7"}
hex = "0.4.3"
log = "0.4.20"
lsp-primitives = { version = "0.1.0", path = "../../libs/lsp-primitives" }
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
